# rdp-coloquio

./: README.md  linear_regression.ipynb  pyproject.toml
