[tool.poetry]
name = "src_coloquio"
version = "0.1.0"
description = ""
authors = ["Pablo Lopes Perera <plopesperera99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"
jupyterlab = "^3.3.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
